<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Patient Index</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation drawer -->
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_addpatient">Add patient</string>
    <string name="menu_searchpatients">Search by patient</string>
    <string name="menu_addbed">Add bed</string>
    <string name="menu_searchbed">Search by bed</string>
    <string name="menu_detailpatient">Patient details</string>
    <string name="menu_detailbed">Bed details</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_settings">Settings</string>

    <!-- HOME PAGE -->
    <string name="text_home">Welcome on Valais Hospital App</string>
    <string name="home_searchPatient_button">Search by Patient</string>
    <string name="home_searchRoom_button">Search by Bed</string>
    <string name="home_statistic_button">Statistic</string>
    <string name="home_bedState_button">Add bed</string>
    <string name="home_settings_button">Settings</string>
    <!-- Settings PAGE -->
    <string name="settings_french_radio" translatable="false">FR</string>
    <string name="settings_english_radio" translatable="false">EN</string>
    <string name="settings_darktheme_switch">Dark Theme</string>
    <string name="settings_aboutus_text">About us</string>

    <string name="settings_loremipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="pref_summary">Define your preferred language</string>
    <string name="pref_select_language">Select your language</string>

    <!-- for the "PatientEntity in" form -->
    <string name="firstName">Firstname</string>
    <string name="lastName">Lastname</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="NPA">NPA</string>
    <string name="birthdate">Birthdate</string>
    <string name="submitPatient">Add new patient</string>

    <!-- PATIENT DISPLAY -->
    <string name="firstNamebrut" translatable="false">Alex</string>
    <string name="lastNamebrut" translatable="false">Gharbi</string>
    <string name="addressbrut" translatable="false">Avenue de Edouard-Rod 30</string>
    <string name="citybrut" translatable="false">Lausanne</string>
    <string name="NPAbrut" translatable="false">1007</string>
    <string name="birthdatebrut" translatable="false">01.06.1996</string>

    <!-- ADD BED -->
    <string name="adjust">Adjustable settings</string>
    <string name="nonadjust">Non-adjustable settings</string>

    <string name="bedsizes_1">Baby size (90cm)</string>
    <string name="bedsizes_2">Regular size (90 - 180cm)</string>
    <string name="bedsizes_3">King size (180 - 230cm)</string>

    <string name="bedsizes_et">Bed size</string>
    <string name="adjustable_et">Is adjustable?</string>



    <string-array name="bedsizes_array">
        <item>Baby size (90cm)</item>
        <item>Regular size (90 - 180cm)</item>
        <item>King size (180 - 230cm)</item>
    </string-array>


    <string name="titlesettings">Settings</string>
    <string name="titlesize">Size</string>

    <!-- ADD BED -->
    <string name="occupation">Hospital Occupancy</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>

    <!-- Activity AddBed -->
    <string name="activityAddBed_Title">Bed details</string>
    <string name="activityAddBed_ButtonDisplay">Display selection</string>
    <string name="activityAddBed_YourSelection">Your selection: </string>
    <string name="activityAddBed_btnAddBed">Add Bed</string>
    <string name="btn_pickdate">Pick date</string>


    <!-- Activity AddUser -->
    <string name="activityDisplaypatient">Patient details</string>

    <!-- Activity DisplayBed -->
    <string name="activityDisplayBed_actualPlace">Actual place</string>
    <string name="activityDisplayBed_inRoom">Insert actual room...</string>
    <string name="activityDisplayBed_prevPlace">Previous place</string>
    <string name="activityDisplayBed_prevRoom">Insert prev room...</string>
    <string name="activityAddUser_size">Insert size...</string>
    <string name="activityAddUser_adj">Adjustable or non-adjustable..?</string>
    <string name="activityAddUser_title" translatable="false" tools:ignore="MissingTranslation">Title</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <!-- Activity DisplayUser -->
    <string name="activityDisplayUser_">Edit</string>
    <string name="menu_detailpatients">List patients</string>
    <string name="menu_detailbeds">List beds</string>

    <string name="bedId" translatable="false">BED ID</string>



    <!-- Activity DisplayUser -->
    <string name="searchhere">Search here</string>

    <string name="search">Search</string>
    <string name="list">List</string>


    <!-- Activity Statistics -->
    <string name="percentageBrute" translatable="false">80%</string>

    <string name="deletepatient">Delete all patients</string>
    <string name="patientmenu">Delete all patients</string>
    <string name="changelanguage">Change language</string>
    <string name="info">In order for the language to be changed, please note that you need to click on the save icon on the upper right corner. Then close the app, come back and the language should be changed.</string>
    <string name="settings_changelanguage">Change language</string>


    <!-- Activity DisplayPatient -->



</resources>
