<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_displaypatient" />

        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_charts"
            android:title="@string/menu_stats" />

q        <item
            android:id="@+id/nav_statistiques"
            android:icon="@drawable/ic_charts"
            android:title="stattststsst" />



    </group>

    <item android:title="Search">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_searchbed"
                android:title="@string/menu_searchbed" />

            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_searchperson"
                android:title="@string/menu_searchpatients" />


        </menu>
    </item>

    <item android:title="Add">
        <menu>
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_person_add"
                android:title="@string/menu_addpatient" />

            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_bed"
                android:title="@string/menu_addbed" />

        </menu>
    </item>
    <item android:title="Preferences">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>
