<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/firstNamebrut"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/et_lastname"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/et_lastname"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/lastNamebrut"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/et_birthdate"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="201dp"
        android:layout_height="200dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/et_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/adroidselffie" />

    <TextView
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/addressbrut"
        android:textSize="25sp"
        android:textColor="@color/textbody"
        app:layout_constraintBottom_toTopOf="@+id/et_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/et_city"
        android:layout_width="148dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="250dp"
        android:hint="@string/citybrut"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/et_npaaa"
        android:layout_width="148dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="250dp"
        android:hint="@string/NPAbrut"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_city" />

    <TextView
        android:id="@+id/et_birthdate"
        android:layout_width="113dp"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/birthdatebrut"
        android:inputType="date"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/et_address"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>